# IPS-data-portal

./: Dockerfile  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: workflows.yml
ipsdataportal/: __init__.py
