[metadata]
name = ipsdataportal
description = IPS Data Portal for IPS Framework

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    flask==2.2.2
    pymongo==4.3.3
    gunicorn==20.1
    plotly==5.11
    requests==2.28.1

[flake8]
max-line-length = 120
